...
                children: [
                  Row(
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: [
                      Expanded(
                        child: Text(
                          'Find Your Forever Pet',
                          style: AppTextStyles.s24w700.c(ColorsApp.richBlack),
                        ),
                      ),
                      Icon(CupertinoIcons.bell, size: 24.r),
                    ],
                  ),
...
                context.read<BreedsCubit>().fetchBreeds(refresh: true);
              },
              style: ElevatedButton.styleFrom(
                backgroundColor: ColorsApp.verdigris,
                foregroundColor: ColorsApp.white,
              ),
              child: Text('Retry'),
            ),
          ],
        ),
      );
    }

...
