...
          BottomNavigationBarItem(
            icon: ImageIcon(AssetImage(AssetPaths.images.favorite), size: 24.r),
            activeIcon: ImageIcon(
              AssetImage(AssetPaths.images.favorite),
              size: 30.r,
            ),
            label: 'Favorite',
          ),
          BottomNavigationBarItem(
            icon: ImageIcon(AssetImage(AssetPaths.images.message), size: 24.r),
            activeIcon: ImageIcon(
              AssetImage(AssetPaths.images.message),
              size: 30.r,
...
