...
          },
          builder: (context, state) {
            return Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                Text(
                  'Your Favorite Pets',
                  style: AppTextStyles.s24w700.c(ColorsApp.richBlack),
                ),
                SizedBox(height: 20.h),
                Expanded(child: _buildFavoritesList(context, state)),
              ],
            );
...
